# SorenLib

./: .gitignore  CMakeLists.txt  README.md  TimeFormatInfo.md  config.cmake.in
include/: Any.hpp  Formatter.hpp  Logger.hpp  Nullable.hpp  Result.hpp  Thread.hpp  Topic.hpp  TopicInterface.hpp
include/internal/: LogDestination.hpp  LogStream.hpp  Publisher.hpp  Subscriber.hpp  Topic.hpp
src/: Formatter.cpp  LogDestination.cpp  LogStream.cpp  Logger.cpp  Thread.cpp  Topic.cpp
